# AGE_engine

./: .gitignore  Cargo.toml  README.md  USAGE.md  pyproject.toml
.config/: nextest.toml
.github/workflows/: CI.yml
age_core/src/: events.rs  game.rs
audio/: Cargo.toml
audio/src/: errors.rs  lib.rs  output_handle.rs
core/src/: events.rs  lib.rs  scheduler.rs
crates/age-audio/: Cargo.toml
crates/age-graphics/: Cargo.toml
crates/age-quickstart/: Cargo.toml
crates/age-rendering/src/: config.rs  errors.rs  instance.rs  lib.rs  model.rs  state.rs  texture.rs
crates/age-rendering/src/camera/: uniform.rs
crates/age_audio/src/: errors.rs  output_handle.rs  traits.rs
crates/age_graphics/: Cargo.toml
crates/age_quickstart/src/audio/: mod.rs
crates/age_rendering/: Cargo.toml
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  traits.rs
crates/event_derive/: Cargo.toml
crates/event_derive/src/: lib.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: lib.rs
crates/graphics/src/_2d/: sprite.rs
crates/graphics_core/: Cargo.toml
crates/graphics_core/src/: resources.rs  state.rs
crates/graphics_core/src/camera/: mod.rs
crates/quickstart/: Cargo.toml
graphics/src/_2d/: mod.rs
graphics/src/_3d/: mod.rs
graphics_core/: Cargo.toml  build.rs
graphics_core/src/: config.rs  model.rs  resources.rs  state.rs  texture.rs
src/: aliases.rs  camera.rs  events.rs  game.rs  lib.rs  prelude.rs  scheduler.rs  world.rs
src/commands/: mod.rs
src/general/: events.rs  mod.rs
src/graphics/: mod.rs
src/graphics/_2d/: sprite.rs
src/graphics/core/: camera.rs  resources.rs
