#cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = ["crates/audio", "crates/event_derive", "crates/graphics", "crates/graphics_core", "crates/quickstart", "crates/event_derive"]

[package]
name = "age_engine"
version = "0.1.1"
edition = "2024"
authors = ["Jonathan Schmittat"]

#to be removed when proper testing is underway
[[bin]]
name="events"
path="tests/events.rs"


[dependencies]
#graphics={path="./graphics"}
graphics_core={path="crates/graphics_core",version="0.1.1"}
audio={path="crates/audio", version="0.1.1"}
#quickstart={path="./quickstart"}
event_derive={path= "crates/event_derive",version="0.1.1"}

anymap = "0.12.1"
env_logger="0.10.2"
log="0.4.0"
pollster="0.4.0"
cgmath="0.18.0"
winit={version="0.30.12",features = ["android-native-activity"]}
wgpu={version = "26.0.1",default-features = false,features = ["dx12","metal","gles","vulkan","wgsl"]}
image={version = "0.24.9",default-features = false,features = ["png", "jpeg"]}
bytemuck={version = "1.16",features = ["derive"]}
tobj={version = "3.2.5",default-features = false,features = ["async"]}
pyo3 = { version = "0.27.2", optional = true }

[features]
python=["dep:pyo3"]