#cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = [
"crates/age_audio", 
"crates/age_rendering", 
"crates/age_quickstart",
"crates/age_graphics"
]

[package]
name = "age-engine"
version = "0.1.1"
edition = "2024"
authors = ["Jonathan Schmittat"]

[dependencies]
age_audio={path="crates/age_audio"}

env_logger="0.10.2"
log="0.4.0"
pollster="0.4.0"
cgmath="0.18.0"
winit={version="0.30.12",features = ["android-native-activity"]}
wgpu={version = "26.0.1",default-features = false,features = ["dx12","metal","gles","vulkan","wgsl"]}
image={version = "0.24.9",default-features = false,features = ["png", "jpeg"]}
bytemuck={version = "1.16",features = ["derive"]}
tobj={version = "3.2.5",default-features = false,features = ["async"]}
pyo3 = { version = "0.27.2", optional = true }

#more granularity later
bevy_ecs={version="0.17.3", features=["multi_threaded","async_executor","std"], default-features=false}


[features]
python=["dep:pyo3", "age_audio/python"]
#tracy
#serde=["bevy_ecs/serialize"]
#