#lower-level graphics + rendering

[package]
name = "age_rendering"
version = "0.1.1"
edition = "2024"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
color="0.3.1"

[dependencies.winit]
version="0.30.12"
features = ["android-native-activity"]

[dependencies.env_logger]
version = "0.10.2"

[dependencies.wgpu]
version = "26.0.1"
default-features = false
features = ["dx12","metal","gles","vulkan","wgsl","parking_lot","std","static-dxc"]

[dependencies.image]
version = "0.24.9"
default-features = false
features = ["png", "jpeg"]

[dependencies.log]
version = "0.4"

[dependencies.pollster]
version = "0.4.0"

[dependencies.bytemuck]
version = "1.16"
features = ["derive"]

[dependencies.cgmath]
version = "0.18.0"

[dependencies.tobj]
version = "4.0.3"
default-features = false
features = ["async","tokio"]

[dependencies.tokio]
version="1.47.1"
default-features = false
features = ["parking_lot"]
