[package]
name = "graphics"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies.anyhow]
version="1.0"

[dependencies.winit]
version="0.30"
features = ["android-native-activity"]

[dependencies.env_logger]
version = "0.10"

[dependencies.wgpu]
version = "26.0.1"
default-features = false
features = ["dx12","metal","gles","vulkan","wgsl"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.log]
version = "0.4"

[dependencies.pollster]
version = "0.3"

[dependencies.bytemuck]
version = "1.16"
features = ["derive"]

[dependencies.cgmath]
version = "0.18.0"

[dependencies.tobj]
version = "3.2"
default-features = false
features = ["async"]
